Resolve IDE and sonar warnings